<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/view_quiz_result_title"
        android:fontFamily="@font/adamina"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/lblQuizResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/your_score_text"
        tools:layout_editor_absoluteX="180dp"
        tools:layout_editor_absoluteY="216dp"
        android:fontFamily="@font/adamina"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/txtQuizResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/quiz_score_text"
        tools:layout_editor_absoluteX="180dp"
        tools:layout_editor_absoluteY="216dp"
        android:fontFamily="@font/adamina"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btnNewQuiz"
        android:layout_width="240dp"
        android:layout_height="73dp"
        android:layout_gravity="center"
        android:text="@string/new_quiz_button_text"
        android:fontFamily="@font/adamina"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#14216E"
        app:backgroundTint="#A8DAD5"
        app:cornerRadius="30dp"
        android:onClick="onBtnClick_NewQuiz"

        />

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="240dp"
        android:layout_height="73dp"
        android:layout_gravity="center"
        android:text="@string/finish_quiz_button_text"
        android:fontFamily="@font/adamina"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#14216E"
        app:backgroundTint="#A8DAD5"
        app:cornerRadius="30dp"
        android:onClick="onBtnClick_Finish"

        />




</LinearLayout>