<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtMainActivityTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/adamina"
        android:gravity="center"
        android:text="@string/main_activity_title"
        android:textColor="#14216E"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:layout_marginTop="200dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_weight="1"
            android:fontFamily="@font/adamina"
            android:text="@string/labelText_username"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:hint="@string/hint_username"
            android:autofillHints="personName"/>


    </LinearLayout>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="222dp"
        android:layout_height="73dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/adamina"
        android:text="@string/buttonText_start"
        android:textColor="#14216E"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#A8DAD5"
        app:cornerRadius="30dp"
        app:strokeColor="#14216E" />


</LinearLayout>