<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtWelcomeMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="30dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblQuizProgress"
            android:layout_width="57dp"
            android:layout_height="29dp"
            android:layout_weight="0"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
           />

        <ProgressBar
            android:id="@+id/quizProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="300dp"
            android:paddingRight="30dp"
            android:paddingEnd="30dp"
            android:paddingLeft="30dp"
            android:paddingStart="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="5"
            android:progress="1"
            android:scaleY="3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtQuestionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_title"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtQuestionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_text"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            />

    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/answersLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        >
    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btnSubmitNext"
        android:layout_width="240dp"
        android:layout_height="73dp"
        android:layout_gravity="center"
        android:text="@string/submit_button_text"
        android:fontFamily="@font/adamina"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#14216E"
        app:backgroundTint="#A8DAD5"
        app:cornerRadius="30dp"
        android:onClick="onSubmitNextButtonClicked"/>











</LinearLayout>